Added Nav bar in sidebar for images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,14 @@
           {% if site.github.is_project_page %}
             <p class="repo-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</p>
           {% endif %}
-
+          
+          <div class="wrapper">
+               <nav>
+                   <ul>
+                      <li><img src="Images/MansiAgarwal.jpg">
+                   </li></ul>    
+              </nav>    
+           </div>
           
         </aside>
       </div>
