Updated image style for MansiAgarwal.jpg

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
           <div class="wrapper">
                <nav>
                    <ul>
-                      <li><img src="Images/MansiAgarwal.jpg">
+                      <li><img src="Images/MansiAgarwal.jpg" style= "height:250px; width: 200px; right:-10%">>
                    </li></ul>    
               </nav>    
            </div>
