Added LinkedIn and Email Images in table in navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,8 +55,23 @@
           <div class="wrapper">
                <nav>
                    <ul>
-                      <li><img src="Images/MansiAgarwal.jpg" style= "height:250px; width: 200px; right:-10%">>
-                   </li></ul>    
+                      <li>
+                        <img src="Images/MansiAgarwal.jpg" style= "height:250px; width: 200px; right:-10%">>
+                     </li>
+                     <li style="margin-left: 10%"><table style="height:30px; width:30px ">
+                      <tbody>
+                        <tr>
+                          <th>
+                            <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;tf=1&amp;to=agarwal.ma@northeastern.edu" target="_blank"><img src="Images/Email.png" style=" height:30px; width:30px"></a>
+                          </th>
+                          <th>
+                            <a href="https://www.linkedin.com/in/mansivagarwal/" target="_blank"><img src="Images/LinkedIn.png" style=" height:30px; width:30px"></a>
+                          </th>
+                      </tr> 
+                       </tbody></table>
+                    </li>
+                 
+                 </ul>    
               </nav>    
            </div>
           
