Update padding of email and linkedin icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
                       <tbody>
                         <tr>
                           <th>
-                            <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;tf=1&amp;to=agarwal.ma@northeastern.edu" target="_blank"><img src="Images/Email.png" style=" height:30px; width:30px"></a>
+                            <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;tf=1&amp;to=agarwal.ma@northeastern.edu" target="_blank"><img src="Images/Email.png" style=" height:30px; width:30px; padding-left:50px"></a>
                           </th>
                           <th>
                             <a href="https://www.linkedin.com/in/mansivagarwal/" target="_blank"><img src="Images/LinkedIn.png" style=" height:30px; width:30px"></a>
