Removed table border and bullet for ul

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,11 @@
 header a.button small {
     color: black !important;
 }
+
+table {
+    border : 0px !important
+}
+
+ul {
+    list-style-type:none
+}
