Updated ul style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
           
           <div class="wrapper">
                <nav>
-                   <ul>
+                   <ul style = "list-style:none">
                       <li>
                         <img src="Images/MansiAgarwal.jpg" style= "height:250px; width: 200px; right:-10%">>
                      </li>
