Updated table border

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
                       <li>
                         <img src="Images/MansiAgarwal.jpg" style= "height:250px; width: 200px; right:-10%">>
                      </li>
-                     <li style="margin-left: 10%"><table style="height:30px; width:30px ">
+                     <li style="margin-left: 10%"><table style="height:30px; width:30px; border:0px ">
                       <tbody>
                         <tr>
                           <th>
