--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
                <nav>
                    <ul style = "list-style:none">
                       <li>
-                        <img src="Images/MansiAgarwal.jpg" style= "height:250px; width: 200px; right:-10%">>
+                        <img src="Images/MansiAgarwal.jpg" style= "height:250px; width: 200px; right:-10%">
                      </li>
                      <li style="margin-left: 10%"><table style="height:30px; width:30px; border:0px ">
                       <tbody>
